--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ span{
     margin: 30px 0px;
     border-radius: 4px;
 }
+.detel a:hover{
+    background: transparent;
+    border: 1px solid indianred;
+}
 
 .images{
     width:50%;
