--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ span{
     padding: 10px 18px;
     text-decoration: none;
     font-weight: bold;
-    color: bisque;
+    color: lawngreen;
     display: inline-block;
     margin: 30px 0px;
     border-radius: 4px;
