--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-image: url("bg_portfolio.avif");
+    background-size: cover;
 }
 .hero{
     position: relative;
